Add transaction, Save - djelimicno !

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".TransactionActivitiy"/>
+        <activity android:name=".TransactionMakeAChangeActivity"/>
+        <activity android:name=".AddTransactionActivity"/>
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
