--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    
+    plugins {
+         id "org.sonarqube" version "3.3"
+    }
 }
+
 
 allprojects {
     repositories {
