--- a/build.gradle
+++ b/build.gradle
@@ -6,22 +6,25 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-
+        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
     
     plugins {
-         id "org.sonarqube" version "3.3"
+        id("org.sonarqube") version "3.3"
     }
 }
 
+apply(plugin = "org.sonarqube")
 
 allprojects {
     repositories {
